[package]
name = "tokio-file-unix"
version = "0.5.1"
authors = ["Phil Ruffwind <rf@rufflewind.com>"]
description = "Asynchronous support for epollable files via Tokio on Unix-like platforms"
documentation = "https://docs.rs/tokio-file-unix"
repository = "https://github.com/Rufflewind/tokio-file-unix"
readme = "README.md"
keywords = ["asynchronous", "file", "pipe", "stdio", "tokio"]
categories = ["asynchronous"]
license = "MIT/Apache-2.0"
exclude = [".gitignore", "tests/seek.txt"]

[dependencies]
bytes = "0.4.2"
libc = "0.2.21"
mio = "0.6.6"
tokio-io = "0.1.1"
tokio-reactor = "0.1.1"

[dev-dependencies]
futures = "0.1.10"
tokio = "0.1.5"
