[package]
name = "tokio-file-unix"
version = "0.6.0"
authors = ["Phil Ruffwind <rf@rufflewind.com>"]
description = "Asynchronous support for epollable files via Tokio on Unix-like platforms"
documentation = "https://docs.rs/tokio-file-unix"
repository = "https://github.com/Rufflewind/tokio-file-unix"
readme = "README.md"
keywords = ["asynchronous", "file", "pipe", "stdio", "tokio"]
categories = ["asynchronous"]
license = "MIT/Apache-2.0"
exclude = [".gitignore", ".travis.yml", "tests/seek.txt"]
edition = "2018"

[dependencies]
libc = "0.2.21"
mio = "0.6.6"
tokio = { version = "0.2.6", features = ["io-driver"] }

[dev-dependencies]
futures = "0.3.8"
tokio = { version = "0.2.6", features = ["io-util", "macros"] }
tokio-util = { version = "0.3.0", features = ["codec"] }
actix-rt = "1.1.1"
actix-web = "3.3.0"
